--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Textile';
+  src: url('./fonts/Textile.ttf')
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root {
+  height: 100%;
+  margin: 0px;
+}
+
+.App {
+  min-height: 100%;
+  background: black;
+}
+
+.Header {
+  width: 100%;
+  height: 15rem;
+}
+
+.Scoreboard {
+  padding-top: 2rem;
+  color: white;
+  font-size: 1.5rem;
+  font-family: 'Textile';
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.MainContainer {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.title {
+  font-family: 'Textile';
+  color: white;
+  font-size: 4rem;
+  height: 8rem;
+  padding-top: 2rem;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.Card {
+  height: 250px;
+  width: 230px;
+  background: white;
+  padding: 1rem;
+  box-sizing: border-box;
+  font-family: monospace;
+  font-size: 1.3rem;
+}
+
+img {
+  height: 200px;
+  width: 200px;
 }
