--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,14 @@ html, body, #root {
 
 .Header {
   width: 100%;
-  height: 15rem;
+  height: 14rem;
 }
 
 .Scoreboard {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   color: white;
   font-size: 1.5rem;
-  font-family: 'Textile';
+  font-family: 'Helvetica';
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -30,8 +30,10 @@ html, body, #root {
 
 .MainContainer {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
+  padding-bottom: 2rem;
 }
 
 .title {
@@ -52,6 +54,10 @@ html, body, #root {
   box-sizing: border-box;
   font-family: monospace;
   font-size: 1.3rem;
+}
+
+.Card:hover {
+  border: 2px solid yellow;
 }
 
 img {
