--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,12 @@ html, body, #root {
 
 .Header {
   width: 100%;
-  height: 14rem;
+  height: 10rem;
 }
 
 .Scoreboard {
-  padding-top: 2.5rem;
   color: rgb(206, 206, 206);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-family: 'monospace';
   text-align: center;
   display: grid;
@@ -31,15 +30,16 @@ html, body, #root {
 .MainContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.6rem;
   justify-content: center;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .title {
   font-family: 'Textile';
   color: white;
-  font-size: 5rem;
+  font-size: 3.5rem;
   height: 8rem;
   padding-top: 2rem;
   text-align: center;
@@ -51,13 +51,13 @@ html, body, #root {
 }
 
 .Card {
-  height: 250px;
-  width: 230px;
+  height: 190px;
+  width: 177px;
   background: white;
   padding: 1rem;
   box-sizing: border-box;
   font-family: monospace;
-  font-size: 1.35rem;
+  font-size: 1rem;
 }
 
 .Card:hover {
@@ -70,8 +70,8 @@ html, body, #root {
 }
 
 img {
-  height: 200px;
-  width: 200px;
+  height: 145px;
+  width: 145px;
 }
 
 .Notice {
@@ -88,9 +88,9 @@ img {
 
 .message-container {
   background:rgb(255, 255, 255);
-  height: 400px;
-  width: 800px;
-  font-size: 5rem;
+  height: 330px;
+  width: 640px;
+  font-size: 4rem;
   font-family: 'Textile';
   text-align: center;
   display: flex;
@@ -98,6 +98,11 @@ img {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+}
+
+.message-container:hover {
+  background: black;
+  color: white;
 }
 
 .message-container > button {
