--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ html, body, #root {
 
 .Scoreboard {
   color: rgb(206, 206, 206);
-  font-size: 1.2rem;
-  font-family: 'monospace';
+  font-size: 1.5rem;
+  font-family: monospace;
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -52,12 +52,12 @@ html, body, #root {
 
 .Card {
   height: 190px;
-  width: 177px;
+  width: 180px;
   background: white;
-  padding: 1rem;
+  padding: 17px;
   box-sizing: border-box;
   font-family: monospace;
-  font-size: 1rem;
+  font-size: 13px;
 }
 
 .Card:hover {
